--- a/ProjectApp/package.json
+++ b/ProjectApp/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lab2-app",
-  "version": "0.0.0",
+  "name": "projectapp",
+  "version": "9.9.9",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -46,5 +46,9 @@
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 6.1.5.",
+  "main": "index.js",
+  "author": "Tolan",
+  "license": "ISC"
 }
